Migrate project to Java 21
This commit migrates the project from Java 17 to Java 21.

Key changes include:
- Updated Java version to 21 in `pom.xml`.
- Updated Maven plugins: `maven-compiler-plugin` to 3.13.0 and `maven-surefire-plugin` to 3.3.0.
- Enabled tests by removing `<skipTests>true</skipTests>` from Surefire configuration.
- Addressed critical code changes for Java 21 compatibility, including:
    - Replaced deprecated `Boolean` and `Double` constructors.
    - Added `@Deprecated` annotations where appropriate.
    - Suppressed warnings for `JApplet` deprecation and `AccessControlException` in applet context.

The project builds successfully with Java 21. No unit tests were found in the project.